--- a/share/dtts.html
+++ b/share/dtts.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <title>Don't touch the spikes</title>
     <meta name="description" content="A fun game with a squirrel & pine cone. Play on laptop & phone!" />
 
@@ -21,9 +21,6 @@
 
     <link rel="manifest" href="manifest/dtts.json">
 
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> -->
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no">
     <style>
         body {
