--- a/share/2048.html
+++ b/share/2048.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <title>2048</title>
 
     <meta name="description" content="The classic 2048. Play on laptop & phone!" />
