--- a/share/account.html
+++ b/share/account.html
@@ -39,11 +39,11 @@ p {
 #main {
     width: 100%;
     max-width: 576px;
-    padding: 3vmin;
-    padding-bottom: 0;
+    padding-top: 3vmin;
 }
 #summary {
     gap: 1vh;
+    margin: 0 3vmin;
     padding: 2vmin;
     border: 1px solid black;
 }
@@ -65,6 +65,7 @@ p {
     text-align: left;
 }
 #actions {
+    margin: 0 3vmin;
     padding: 2vmin;
 }
 #records > div:nth-child(2n+1) {
@@ -75,7 +76,7 @@ p {
 }
 #records > div {
     border-bottom: 1px solid rgb(200, 200, 200);
-    padding: 2vmin;
+    padding: 2vmin 5vmin;
 
     display: flex;
     flex-direction: column;
