Improve styling: better on safari

--- a/share/2048.html
+++ b/share/2048.html
@@ -27,6 +27,7 @@
             height: 100%;
             overflow-y: hidden;
             /* to disable chrome mobile pull-to-refresh: https://stackoverflow.com/questions/29008194/ */
+            -webkit-user-select: none;
             user-select: none;
             position: relative;
             font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
