--- a/share/memo.html
+++ b/share/memo.html
@@ -39,6 +39,7 @@ main p {
 .card {
     /* border: 2px solid rgb(223,223,223); */
     border-width: 2px;
+    -webkit-user-select: none;
     user-select: none;
 }
 .card-text {
@@ -88,6 +89,7 @@ main p {
 }
 #folder-modal-div > div > p {
     cursor: pointer;
+    -webkit-user-select: none;
     user-select: none;
 }
     </style>
