--- a/share/ktv.html
+++ b/share/ktv.html
@@ -36,6 +36,22 @@ body {
 p, pre {
     margin: 0;
 }
+@media not all and (min-resolution:.001dpcm) {
+    @media {
+        /*
+        To apply CSS only to Safari, a hack from: 
+        https://stackoverflow.com/questions/16348489/
+        */
+        select {
+            -webkit-appearance: none;
+            /* to apply <select> padding */
+        }
+        #search {
+            -webkit-appearance: textfield;
+            /* to apply <input type="search"> padding */
+        }
+    }
+}
 
 #main {
     width: 100%;
@@ -62,13 +78,14 @@ p, pre {
     border-bottom: 1px solid rgb(200, 200, 200);
     padding: 1vh 3vmin;
     cursor: pointer;
+    -webkit-user-select: none;
     user-select: none;
 }
 #items > div > div {
     margin: 1.5vh 0;
 }
 #items .flex-1 {
-    margin-right: 0.5em;
+    margin-right: 0.5rem;
 }
 #title, #company, #search, #selectStart, #selectEnd {
     padding: 1vh 0.5vw;
@@ -77,6 +94,7 @@ p, pre {
     align-items: center;
 }
 #filterBar label {
+    -webkit-user-select: none;
     user-select: none;
 }
 #detail > p {
@@ -123,8 +141,8 @@ p, pre {
 #playerCaptions {
     color: white;
     background-color: rgb(80, 80, 80);
-    padding: 0.4em;
-    border-radius: 0.4em;
+    padding: 0.4rem;
+    border-radius: 0.4rem;
     cursor: pointer;
 }
 
@@ -286,7 +304,7 @@ p, pre {
                 </button>
             </div>
             <div class="d-flex">
-                <audio class="flex-1" controls crossorigin="anonymous">
+                <audio class="flex-1" controls crossorigin="anonymous" preload="metadata">
                     <track default kind="captions" />
                 </audio>
                 <button id="playerMinimize" class="icon-button">
