--- a/share/tic_tac_toe.html
+++ b/share/tic_tac_toe.html
@@ -29,6 +29,7 @@ body {
     width: 100%;
     height: 100%;
 
+    -webkit-user-select: none;
     user-select: none;
     position: relative;
     font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
